<resources>
    <string name="app_name">SHIB Whale Alerts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="header_background">Header background</string>
    <string name="latest_transactions">Latest Transactions</string>
    <string name="back_button">back button</string>
    <string name="_50_secs_ago">50 secs ago</string>
    <string name="txId">0xb4a54af9fe087d8bcb3ca6f60f52d6e3bb12ee34f3d820e4ffc3cd63</string>
    <string name="price">0.013245</string>
    <string name="transaction_hash">Transaction Hash: 0xb4a54af9fe087d8bce32fs526s36g54s43523sts52525fsf32424264bca6f60f52d6e3bb12ee34f3d820e4ff5cd63</string>
    <string name="contact_address">Contact Address</string>
    <string name="transaction_value">Transaction Value</string>
    <string name="txn_fee">Txn Fee</string>
    <string name="gas_price">Gas Price</string>
    <string name="gas_limit">Gas Limit</string>
    <string name="gas_used">Gas Used</string>
    <string name="nonce">Nonce:</string>
    <string name="input_data">Input Data:</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="time_stamp">Time Stamp:</string>
    <string name="block_no">Block No:</string>
    <string name="status">Status:</string>
    <string name="txn_has">Txn Has:</string>
    <string name="cumulative_gas_used">Cumulative Gas Used:</string>
    <string name="txn_index">txn Index:</string>
    <string name="block_has">Block Has:</string>
    <string name="token_name">Token Name:</string>
    <string name="token_symbol">Token Symbol:</string>
    <string name="token_decimal">Token Decimal:</string>
    <string name="image_back">Image back</string>
    <string name="image_filter">Image Filter</string>
    <string name="price_value_filtering">Notification Setting</string>
    <string name="default_value_300_000_0">Minimum value = 100,000</string>
    <string name="_300_000_00">300,000.00</string>
    <string name="update">Update</string>
    <string name="all">All</string>
    <string name="buys">Buys</string>
    <string name="sales">Sells</string>
    <string name="des">You can set your notification filter by change \n the price value. Default value = 300,000.0</string>
    <string name="def">Default</string>
    <string name="buy_shib">Buy SHIB</string>
    <string name="threshold">Threshold</string>
</resources>