<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F2F4"
    tools:context=".view.ui.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_header"
        android:contentDescription="@string/header_background"/>

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_gravity="start|center"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:contentDescription="@string/image_back"
        android:minWidth="48dp"
        android:src="@drawable/ic_back_button" />

    <ImageButton
        android:id="@+id/btnSetting"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_gravity="end|center"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:contentDescription="@string/image_filter"
        android:minWidth="48dp"
        android:src="@drawable/ic_settings" />

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="120dp">

        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="@string/latest_transactions"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutHeader"
        android:layout_marginTop="-30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAll"
            android:layout_width="110dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_white_round"
            android:text="@string/all"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvBuys"
            android:layout_width="110dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_white_round"
            android:text="@string/buys"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvSales"
            android:layout_width="110dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_round"
            android:text="@string/sales"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/menuBar">


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fcvMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.crytpo.shibwhalealerts.view.ui.fragment.DashboardFragment"
            tools:layout="@layout/fragment_dashboard" />

    </LinearLayout>



</RelativeLayout>