<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light"
    android:background="@color/white"
    tools:context=".view.ui.fragment.FilterFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:text="@string/price_value_filtering"/>

        <TextView
            android:id="@+id/tvCurrentValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/default_value_300_000_0"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:text="@string/default_value_300_000_0"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/etvPriceValue"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:hint="@string/_300_000_00"
            android:textAlignment="center"
            android:textSize="15sp"
            android:background="#FFDADA"
            android:inputType="number"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/update"
            android:padding="5dp"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>