<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.Light"
    app:cardCornerRadius="10dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivTxnImg"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="start|center"
            android:layout_margin="10dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_list_tx"
            tools:ignore="ImageContrastCheck" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTxHas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center|start"
                android:layout_marginEnd="5dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/txId"/>

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:text="@string/_50_secs_ago"/>

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:paddingTop="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:maxLines="1"
                android:textStyle="bold"
                android:ellipsize="end"
                android:textSize="15sp"
                android:textAlignment="center"
                android:background="@drawable/bg_price_tag"
                android:text="@string/price"/>


            <!--
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/black"
                    android:text="@string/from"/>

                <TextView
                    android:id="@+id/tvAddressFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/txId"/>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/black"
                    android:text="@string/to"/>

                <TextView
                    android:id="@+id/tvAddressTo"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/txId"/>
            </LinearLayout>
-->

        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>